--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Homepage
+Fresh Harvest Veggies
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <h1 class="title">Welcome to Fresh Harvest Veggies</h1>
-        <p class="subtitle">
-            Fresh Harvest Grocer is a local grocery store that offers high quality farm-fresh vegetables.
-            We are committed to providing our customers with the best quality produce at affordable prices.
-        </p>
+    <div class="container mt-5 p-2">
+        <div class="card text-center p-2">
+            <div class="card-body">
+                <h1 class="card-title mt-5 mb-5">Welcome to Fresh Harvest Veggies</h1>
+                <p class="card-text mt-5 mb-5">
+                    Fresh Harvest Grocer is a local grocery store that offers high quality farm-fresh vegetables.
+                    We are committed to providing our customers with the best quality produce at affordable prices.
+                </p>
+            </div>            
+        </div>
     </div>
 {% endblock %}
