--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ Fresh Harvest Veggies
 
 {% block content %}
     <div class="container mt-5 p-2">
-        <div class="card text-center p-2">
+        <div class="card text-center p-2" style="height:400px;">
             <div class="card-body">
                 <h1 class="card-title mt-5 mb-5">Welcome to Fresh Harvest Veggies</h1>
                 <p class="card-text mt-5 mb-5">
