--- a/templates/customer/checkout.html
+++ b/templates/customer/checkout.html
@@ -1,52 +1,109 @@
+{% extends 'base.html' %}
+
+{% block title %}
+Orders
+{% endblock %}
+
+{% block content %}
 <!-- Payment section -->
-<div class="container">
+<div class="container" style="width:500px">
     <h4 class="">
         Payment
     </h4>
-    <div>
-
-    </div>
-    <div class="mb-2">
-        <div class="form-check" >
-            <input class="form-check-input" type="radio" name="payment_method" id="pay_now" value="credit_card" required>
-            <label class="form-check-label" for="pay_now">Credit card</label>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <label for="cc_name" class="form-label">Name on Card</label>
-            <input type="text" class="form-control" name="cc_name" id="cc_name" placeholder="" required>
-            <small class="text-body-secondary">Full name as displayed on card</small>
-            <div class="invalid-feedback">
-                Name on card is required
-            </div>
-        </div>
-        <div class="col-md-12">
-            <label for="cc_number" class="form-label">Card Number</label>
-            <input type="text" class="form-control" name="cc_number" id="cc-number" placeholder="" pattern="[\d ]{19}" required>
-            <div class="invalid-feedback">
-                Card number must be a 16-digit number.
-            </div>
-        </div>
-        <div class="col-md-6">
-            <label class="form-label">Expiration (mm/yy)</label>
-            <div class="row">
-                <div class="col">
-                    <input type="tel" class="form-control" name="cc_month" id="cc_expiration" placeholder="MM/YY" pattern="[0-9\/]{5}" required>
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Charge to account
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form class="row" action="{{ url_for('customer.charge_to_account', order_id=order.id) }}" method="POST">
+                        <input type="hidden" name="payment_type" value="charge_to_account">
+                        <div class="row">
+                            <button type="submit" class="btn btn-primary w-100"> Charge to Account </button>
+                        </div>	
+                    </form>
                 </div>
             </div>
-            <div class="invalid-feedback">
-                Expiration date required
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Debit Card
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form class="row" action="{{ url_for('customer.payment', order_id=order.id) }}" method="POST">
+                        <input type="hidden" name="payment_type" value="debit_card">
+                        <div class="form-group">
+                            <label for="bank">Bank</label>
+                            <select name="bank" id="bank" required>
+                                <option value="" disabled selected>Select bank...</option>
+                                {% for bank in banks %}
+                                    <option value="{{ bank }}">{{ bank }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="card_no" class="form-label">Card Number</label> 
+                            <input type="text" name="card_no" placeholder="1234 5678 9012 3457" id="card_no" minlength="19" maxlength="19" pattern="[\d ]{19}" required>
+                        </div>
+                        <div class="row">
+                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ total | round(2)}}</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-
-        <div class="col-md-6">
-            <label for="cc_cvc" class="form-label">CVC</label>
-            <input type="tel" class="form-control" name="cc_cvc" id="cc_cvc" placeholder="CVC" pattern="[0-9]{3}" required>
-            <div class="invalid-feedback">
-                Security code required
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Credit Card
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form class="row" action="{{ url_for('customer.payment', order_id=order.id) }}" method="POST">
+                        <input type="hidden" name="payment_type" value="credit_card">
+                        <div class="form-group">
+                            <label for="card_type">Card Type</label>
+                            <select name="card_type" id="card_type" required>
+                                <option value="" disabled selected>Select Card Type...</option>
+                                {% for card_type in card_types %}
+                                    <option value="{{ card_type }}">{{ card_type }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>                          
+						<div class="form-group">
+                            <label for="card_no" class="form-label">Card Number</label> 
+                            <input type="text" name="card_no" placeholder="1234 5678 9012 3457" id="card_no" minlength="19" maxlength="19" pattern="[\d ]{19}" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="form-label">Name</label> 
+                            <input type="text" id="name" name="name" placeholder="Name" size="17" required>
+                            <small class="text-body-secondary">Full name as displayed on card</small>
+                        </div>
+                        <div class="form-group">
+                        	<div class="row">
+                        		<div class="col-sm-6">
+                                    <label for="expiry" class="form-label">Expiry</p>
+                        			<input type="text" name="expiry" placeholder="MM/YY" size="5" id="expiry" minlength="5" maxlength="5" pattern="[0-9\/]{5}" required>
+                        		</div>
+                        		<div class="col-sm-6">
+                                    <label for="cvv" class="form-label">CVV</p>
+                        			<input type="password" name="cvv" id="cvv" placeholder="&#9679;&#9679;&#9679;" size="3" minlength="3" maxlength="3" pattern="[0-9]{3}" required>
+                        		</div>                        		
+                        	</div>
+                        </div>
+                        <div class="row">
+                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ total | round(2)}}</button>
+                        </div>		
+					</form>
+                </div>
             </div>
         </div>
-        <button class="btn btn-cta mt-3" id="pay_now_btn">Pay now</button>
     </div>
-</div>
+{% endblock %}
