--- a/templates/customer/list_premadeboxes.html
+++ b/templates/customer/list_premadeboxes.html
@@ -17,16 +17,13 @@ Premade Boxes
     {% for box in boxes %}
     <div class="card mb-3">
         <div class="row g-0">
-            <h5 class="card-header">{{ box.size | title }} Box - {{ "$%.2f" | format(box.price) }}</h5>
+            <h5 class="card-header .bg-primary-subtle">{{ box.size | title }} Box - {{ "$%.2f" | format(box.price) }}</h5>
             <div class="card-body">
                 <ol class="list-group list-group-numbered">
-                    {% for item in box.contents %}
-                        <li class="list-group-item">{{ item.product.name }} - {{ item.quantity }} {{ item.product.unit }}</li>
+                    {% for item in box.components %}
+                        <li class="list-group-item">{{ item.vegetable.name }} - {{ item.quantity }} {{ item.vegetable.unit }}</li>
                     {% endfor %}
                 </ol>
-                <p>
-                    {{ box.content }}
-                </p>
             </div>
         </div>
     </div>
