--- a/templates/customer/checkout.html
+++ b/templates/customer/checkout.html
@@ -19,10 +19,10 @@ Orders
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <form class="row" action="{{ url_for('customer.charge_to_account', order_id=order.id) }}" method="POST">
+                    <form class="row" action="{{ url_for('payment.charge_to_account', order_id=order_id) }}" method="POST">
                         <input type="hidden" name="payment_type" value="charge_to_account">
                         <div class="row">
-                            <button type="submit" class="btn btn-primary w-100"> Charge to Account </button>
+                            <button type="submit" class="btn btn-primary w-100"> Charge {{ "$%.2f" | format(total)}} to Account </button>
                         </div>	
                     </form>
                 </div>
@@ -36,7 +36,7 @@ Orders
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <form class="row" action="{{ url_for('customer.payment', order_id=order.id) }}" method="POST">
+                    <form class="row" action="{{ url_for('payment.card_payment', order_id=order_id) }}" method="POST">
                         <input type="hidden" name="payment_type" value="debit_card">
                         <div class="form-group">
                             <label for="bank">Bank</label>
@@ -52,7 +52,7 @@ Orders
                             <input type="text" name="card_no" placeholder="1234 5678 9012 3457" id="card_no" minlength="19" maxlength="19" pattern="[\d ]{19}" required>
                         </div>
                         <div class="row">
-                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ total | round(2)}}</button>
+                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ "$%.2f" | format(total)}}</button>
                         </div>
                     </form>
                 </div>
@@ -66,7 +66,7 @@ Orders
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <form class="row" action="{{ url_for('customer.payment', order_id=order.id) }}" method="POST">
+                    <form class="row" action="{{ url_for('payment.card_payment', order_id=order_id) }}" method="POST">
                         <input type="hidden" name="payment_type" value="credit_card">
                         <div class="form-group">
                             <label for="card_type">Card Type</label>
@@ -99,7 +99,7 @@ Orders
                         	</div>
                         </div>
                         <div class="row">
-                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ total | round(2)}}</button>
+                            <button type="submit" class="btn btn-primary w-100"> Pay ${{ "$%.2f" | format(total)}}</button>
                         </div>		
 					</form>
                 </div>
