--- a/templates/customer/order/list.html
+++ b/templates/customer/order/list.html
@@ -45,30 +45,28 @@ Orders
                     <td>{{ order.status }}</td>
                     <td>
                         <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('customer.view_order', order_id=order.id) }}">
+                        href="{{ url_for('order.view_order', order_id=order.id) }}">
                             <i class="bi bi-eye"></i> Details
                         </a>
-                        {# 
-                        <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('customer.view_order', order_id=order.id) }}">
-                            <i class="bi bi-eye"></i> Details
-                        </a>
-                        {% if order.status == 'Pending' %}
-                        <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('customer.cancel_order', order_id=order.id) }}">
-                            <i class="bi bi-eye"></i> Cancel
-                        </a>
-                        <form action="{{ url_for('customer.cancel_order', order_id=order.id) }}" method="post" class="d-inline">
+                        {% if order.status in ('Pending', 'Confirmed') and role in ('customer', 'corporate_customer')%}
+                        <form action="{{ url_for('order.cancel_order', order_id=order.id) }}" method="post" class="d-inline">
                             <button type="submit" class="btn btn-danger btn-sm" 
-                            onclick="return confirm('Are you sure you want to cancel order?');">
-                                <i class="bi bi-trash"></i> Cancel
+                                onclick="return confirm('Are you sure you want to cancel order?');">
+                                <i class="bi bi-trash"></i> Cancel Order
                             </button>
                         </form>
                         {% endif %}
+                        {% if order.status == 'Pending' %}
                         <!-- add confirm order button for order that is not submitted -->
                         <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('customer.check_out', order_id=order.id) }}">
+                            href="{{ url_for('order.check_out', order_id=order.id) }}">
                             <i class="bi bi-eye"></i> Pay Now
+                        </a>
+                        {% endif %}
+                        {#
+                            <a class="btn btn-primary btn-sm me-2"
+                        href="{{ url_for('staff.update_order', order_id=order.id) }}">
+                            <i class="bi bi-eye"></i> Update
                         </a>
                         #}
                     </td>
