--- a/templates/customer/order/view.html
+++ b/templates/customer/order/view.html
@@ -27,6 +27,9 @@ Orders
 
                     <dt class="col-sm-2">Delivery</dt>
                     <dd class="col-sm-4">{{ "Yes" if order.is_delivery == 1 else "No" }}</dd>
+
+                    <dt class="col-sm-2">Status</dt>
+                    <dd class="col-sm-4">{{ order.status }}</dd>
                                                              
                     <div>
                         <hr>
@@ -45,32 +48,44 @@ Orders
                         </tr>
                     </thead>
                     <tbody>
-                        {% for item in order.orderlines %}
+                        {% for orderline in order.orderlines %}
                         <tr>
                             <td class="text-center">{{ loop.index }}</td>
-                            <td>{{ item.name | title }}</td>                                    
-                            <td class="text-end">{{ item.quantity if item.quantity else item.weight }}</td>
-                            <td class="text-end">{{ item.price }}</td>
-                            {# <td class="text-end me-2">{{ item.calculate_subtotal() }}</td> #}
+                            <td>{{ orderline.item.name if orderline.item.name else orderline.item.box_name() }}</td>                                    
+                            <td class="text-end">{{ orderline.item.quantity_display() }}</td>
+                            <td class="text-end">{{ orderline.item.price_display() }}</td>
+                            <td class="text-end me-2">{{ orderline.item.subtotal_display() }}</td>
                         </tr>
-                        {% endfor %}                                
+                        {% endfor %}
+                        {% if discount > 0 %}                                
                         <tr>
                             <th scope="row" colspan="4" class="border-0 text-end">
-                                Corporate Discount:
+                                Discount:
                             </th>
-                            <td class="border-0 text-end"></td>
+                            <td class="border-0 text-end">
+                                {{ "%.2f"|format(discount) }}
+                            </td>
                         </tr>
+                        {% endif %}
+                        {% if order.is_delivery %}
                         <tr>
                             <th scope="row" colspan="4" class="border-0 text-end">
-                                Shipping Fee:
+                                Delivery Fee:
                             </th>
-                            <td class="border-0 text-end"></td>
+                            <td class="border-0 text-end">
+                                {{ "%.2f"|format(delivery_fee) }}
+                            </td>
                         </tr>
+                        {% endif %}
                         <tr>
                             <th scope="row" colspan="4" class="border-0 text-end">
                                 Total:
                             </th>
-                            <td class="border-0 text-end"><h6 class="m-0 fw-semibold">{{ "NZD %.2f"|format(order.calculate_total()) }}</h6></td>
+                            <td class="border-0 text-end">
+                                <h6 class="m-0 fw-semibold">
+                                {{ "NZD %.2f"|format(order.calculate_final_total()) }}
+                                </h6>
+                            </td>
                         </tr>
                         <!-- end tr -->
                     </tbody>
@@ -78,7 +93,7 @@ Orders
             </div>
         </div>                        
         <div class="d-flex justify-content-start mt-2 mb-3">
-            <a href="{{url_for('customer.list_orders')}}" class="link-back">
+            <a href="{{url_for('order.list_orders')}}" class="link-back">
                 <i class="bi bi-arrow-left"></i> Back to Order List
             </a>
         </div>
