--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{{ url_for('customer.list_orders') }}">
+                    <a class="nav-link text-white" href="{{ url_for('order.list_orders') }}">
                         My Orders
                     </a>
                 </li>
@@ -45,7 +45,7 @@
                 {% endif %}
                 {% if role == 'staff' %}
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="">
+                    <a class="nav-link text-white" href="{{ url_for('staff.list_orders') }}">
                         Orders
                     </a>
                 </li>
