--- a/templates/premadebox/list.html
+++ b/templates/premadebox/list.html
@@ -19,15 +19,14 @@ Premade Boxes
         <div class="row g-0">
             <h5 class="card-header">{{ box.size | title }} Box - {{ "$%.2f" | format(box.price) }}</h5>
             <div class="card-body">
+                {% if role == "staff" %}
                 <h5 class="card-title">Availability: {{ "Yes" if box.available else "No"}}</h5>
+                {% endif %}
                 <ol class="list-group list-group-numbered">
-                    {% for item in box.contents %}
-                        <li class="list-group-item">{{ item.product.name }} - {{ item.quantity }} {{ item.product.unit }}</li>
+                    {% for item in box.components %}
+                        <li class="list-group-item">{{ item.vegetable.name }} - {{ item.quantity }} {{ item.vegetable.unit }}</li>
                     {% endfor %}
                 </ol>
-                <p>
-                    {{ box.content }}
-                </p>
             </div>
         </div>
     </div>
