--- a/templates/staff/profile.html
+++ b/templates/staff/profile.html
@@ -5,25 +5,29 @@ Profile
 {% endblock %}
 
 {% block content %}
-<div>
+<div class="container-fluid p-2">
+    <div class="row mt-4">
+        <div class="col-lg-8 mx-auto">
     <!-- Display if user is logged in -->
-    {% if username and role == 'staff' %}
-    <div class="card border-0">
-        <div class="card-header bg-primary text-white">
-            <h4 class="mb-0">My Details</h4>
-        </div>
-        <div class="card-body">
-            <!-- User Details List Group -->
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">First Name: {{ user.first_name }}</li>
-                <li class="list-group-item">Family Name: {{ user.family_name }}</li>
-                <li class="list-group-item">Phone: {{ user.phone }}</li>
-                <li class="list-group-item">Email: {{ user.email }}</li>
-                <li class="list-group-item">Position: {{ user.position }}</li>
-                <li class="list-group-item">Department: {{ user.department }}</li>
-            </ul>
+            {% if username == user.username and role == "staff" %}
+            <div class="card border-0">
+                <div class="card-header bg-primary text-white">
+                    <h4 class="mb-0">My Details</h4>
+                </div>
+                <div class="card-body">
+                    <!-- User Details List Group -->
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">First Name: {{ user.first_name }}</li>
+                        <li class="list-group-item">Family Name: {{ user.family_name }}</li>
+                        <li class="list-group-item">Phone: {{ user.phone }}</li>
+                        <li class="list-group-item">Email: {{ user.email }}</li>
+                        <li class="list-group-item">Position: {{ user.position }}</li>
+                        <li class="list-group-item">Department: {{ user.department }}</li>
+                    </ul>
+                </div>
+            </div>
+            {% endif %}
         </div>
     </div>
-    {% endif %}
 </div>
 {% endblock %}
