--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <!-- Favicon -->
-    <!-- <link rel="icon" type="image/x-icon" href="#"> -->
     <!-- Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <!-- Bootstrap CSS link -->
@@ -42,9 +40,9 @@
     </div>
     
     <!-- Main Content -->
-    <div class="container mt-4">
+    <div class="container p-4 ">
         {% block content %}
-        <!-- Page-specific content will go here -->
+        <!-- Page-specific content -->
         {% endblock %}
     </div>
     
