--- a/templates/customer/order/list.html
+++ b/templates/customer/order/list.html
@@ -7,7 +7,11 @@ Orders
 {% block content %}
 <div class="container-fluid p-2">
     <div class="d-flex justify-content-between mt-2 mb-3 me-4">
-        <h3>My Orders</h3>
+        {% if role in ('customer', 'corporate_customer') %}
+            <h3>My Orders</h3>
+        {% elif role == 'staff' %}
+            <h3>Orders</h3>
+        {% endif %}
         <div class="d-flex">
             <div class="me-2">
                 <!-- Search Form -->
@@ -44,31 +48,32 @@ Orders
                     <td>{{ "Delivery" if order.is_delivery else "Pickup" }}</td>
                     <td>{{ order.status }}</td>
                     <td>
-                        <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('order.view_order', order_id=order.id) }}">
-                            <i class="bi bi-eye"></i> Details
-                        </a>
-                        {% if order.status in ('Pending', 'Confirmed') and role in ('customer', 'corporate_customer')%}
-                        <form action="{{ url_for('order.cancel_order', order_id=order.id) }}" method="post" class="d-inline">
-                            <button type="submit" class="btn btn-danger btn-sm" 
-                                onclick="return confirm('Are you sure you want to cancel order?');">
-                                <i class="bi bi-trash"></i> Cancel Order
-                            </button>
-                        </form>
-                        {% endif %}
-                        {% if order.status == 'Pending' %}
-                        <!-- add confirm order button for order that is not submitted -->
-                        <a class="btn btn-primary btn-sm me-2"
-                            href="{{ url_for('order.check_out', order_id=order.id) }}">
-                            <i class="bi bi-eye"></i> Pay Now
-                        </a>
-                        {% endif %}
-                        {#
+                        {% if role == 'staff' %}
                             <a class="btn btn-primary btn-sm me-2"
-                        href="{{ url_for('staff.update_order', order_id=order.id) }}">
-                            <i class="bi bi-eye"></i> Update
-                        </a>
-                        #}
+                            href="{{ url_for('staff.view_order', order_id=order.id) }}">
+                                Details
+                            </a>
+                            {% if order.status not in ('Pending', 'Completed', 'Cancelled') %}
+                                {% include 'staff/order/update.html' %}
+                            {% endif %}
+                        {% endif %}
+                        {% if role in ('customer', 'corporate_customer') %}
+                            <a class="btn btn-primary btn-sm me-2"
+                            href="{{ url_for('order.view_order', order_id=order.id) }}">
+                                Details
+                            </a>
+                            {% if order.status == 'Pending' %}
+                            <!-- add confirm order button for order that is not submitted -->
+                            <a class="btn btn-success btn-sm me-2"
+                                href="{{ url_for('order.check_out', order_id=order.id) }}">
+                                Pay Now
+                            </a>
+                            {% endif %}
+                            {% if order.status in ('Pending', 'Confirmed') %}
+                                {% include 'customer/order/cancel.html' %}
+                            {% endif %}
+                            
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
