--- a/templates/premadebox/list.html
+++ b/templates/premadebox/list.html
@@ -20,7 +20,7 @@ Premade Boxes
             <h5 class="card-header">{{ box.size | title }} Box - {{ "$%.2f" | format(box.price) }}</h5>
             <div class="card-body">
                 {% if role == "staff" %}
-                <h5 class="card-title">Availability: {{ "Yes" if box.available else "No"}}</h5>
+                <h5 class="card-title">Available: {{ "Yes" if box.available else "No"}}</h5>
                 {% endif %}
                 <ol class="list-group list-group-numbered">
                     {% for item in box.components %}
