--- a/templates/staff/dashboard.html
+++ b/templates/staff/dashboard.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div>
     <!-- Display if user is logged in -->
     {% if username %}
-    <div class="container mt-5 p-2 text-center">
+    <div>
         <h2 class="mt-4 mb-5">
             Welcome back {{ username }}
         </h2>
