--- a/templates/staff/order/update.html
+++ b/templates/staff/order/update.html
@@ -1,50 +1,49 @@
-{% extends 'base.html' %}
-
-{% block title %}
-Update Order Status
-{% endblock %}
-
-{% block content %}
-<div class="col-11 justify-content-center p-2 mt-2">
-    <!-- <div class="d-flex mb-4 justify-content-start ms-6">
-        <a href="{{ url_for('manage_order.view_order', id=order.id) }}" class="link-back">
-            <i class="bi bi-arrow-left"></i> Back to Order Details
-        </a>
-    </div> -->
-    <div class="d-flex justify-content-between mb-4 me-4">
-        <h3>Update Order Status</h3>
-    </div>  
-    <p class="fst-italic mb-4">Order no.: {{ order.id }}</p>
-    {% if order.status in ('Cancelled', 'Completed') %}
-    <p class="text-center">Order that is completed or cancelled cannot be updated.</p>
-    {% elif order.status in ('Pending', 'Processed', 'Ready for Pickup', 'Shipped') %}
-    <form class="needs-validation" novalidate action="{{ url_for('manage_order.update_order', id=order.id) }}" method="POST">                    
-        <!-- Status -->                    
-        <div class="mb-3">
-            <label for="status" class="form-label">Status: <span class="text-danger">*</span></label>                        
-            <select class="form-select" id="status" name="status" required>
-                {% if order.status in ('Pending') %}
-                    <option value="{{ order.status }}" disabled selected>{{ order.status }}</option>
-                    {% if order.is_delivery %}
-                    <option value="shipped"> Shipped </option>
-                    {% else %}
-                    <option value="ready_for_pickup"> Ready for Pickup </option>
-                    {% endif %}
-                {% elif order.status in ('ready_for_pickup', 'shipped') %}            
-                    <option value="{{ order.status }}" disabled selected>{{ order.status }}</option>
-                    <option value="completed"> Completed </option>
+<!-- Button trigger modal to update order status-->
+<button type="button" class="btn btn-danger btn-sm me-2" data-bs-toggle="modal" data-bs-target="#update{{order.id}}">
+    Update
+</button>
+  
+<!-- Modal -->
+<div class="modal fade" id="update{{order.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateLabel{{order.id}}" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="updateLabel{{order.id}}">Update Order Status</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                {% if order.status in ('Cancelled', 'Completed') %}
+                <p class="text-center">Order that is completed or cancelled cannot be updated.</p>
+                {% elif order.status == 'Pending' %}
+                <p class="text-center">This order has not been confirmed and paid.</p>
+                {% elif order.status in ('Confirmed', 'Ready for Pickup', 'Shipped') %}
+                <form class="needs-validation" novalidate action="{{ url_for('staff.update_order', order_id=order.id) }}" method="POST">                    
+                    <!-- Status -->                    
+                    <div class="mb-3">
+                        <label for="status" class="form-label">Status: <span class="text-danger">*</span></label>                        
+                        <select class="form-select" id="status" name="status" required>                            
+                            <option value="{{ order.status }}" disabled selected>{{ order.status }}</option>
+                            {% if order.status == 'Confirmed' %}
+                                {% if order.is_delivery %}
+                                <option value="Shipped"> Shipped </option>
+                                {% elif order.is_delivery != true %}
+                                <option value="Ready for Pickup"> Ready for Pickup </option>
+                                {% endif %}
+                            {% elif order.status in ('Ready for Pickup', 'Shipped') %}            
+                            <option value="Completed"> Completed </option>
+                            {% endif %}
+                        </select>
+                        <div class="invalid-feedback">
+                            Status is required.
+                        </div>                    
+                    </div>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="bi bi-create"></i> Update
+                    </button>
+                </form>
                 {% endif %}
-            </select>
-            <div class="invalid-feedback">
-                Status is required.
-            </div>                    
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary" onclick="return confirm('Please ensure you have entered the correct information, once submitted it cannot be reverted.');">
-            <i class="bi bi-create"></i> Update
-        </button>
-    </form>
-    {% endif %} 
-    
+    </div>
 </div>
-
-{% endblock %}
