--- a/templates/customer/payment.html
+++ b/templates/customer/payment.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Orders
+Payment
 {% endblock %}
 
 {% block content %}
+<div class="container p-2">
 <!-- Payment section -->
 <div class="container" style="width:500px">
     <h4 class="">
@@ -106,4 +107,5 @@ Orders
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
