--- a/templates/customer/profile.html
+++ b/templates/customer/profile.html
@@ -5,7 +5,7 @@ Profile
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid p-2">
+<div class="container mt-5 p-2">
     <div class="row mt-4">
         <div class="col-lg-8 mx-auto">
             <!-- Display if user is logged in -->
