--- a/templates/auth.html
+++ b/templates/auth.html
@@ -5,7 +5,7 @@ Login
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5 p-2">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card my-5">
