--- a/templates/customer/order/list.html
+++ b/templates/customer/order/list.html
@@ -5,12 +5,12 @@ Orders
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid p-2">
+<div class="container p-2">
     <div class="d-flex justify-content-between mt-2 mb-3 me-4">
         {% if role in ('customer', 'corporate_customer') %}
             <h3>My Orders</h3>
         {% elif role == 'staff' %}
-            <h3>Orders</h3>
+            <h3>Order List</h3>
         {% endif %}
         <div class="d-flex">
             <div class="me-2">
@@ -32,22 +32,22 @@ Orders
     <div class="table-responsive me-4">
         <table class="table table-hover">
             <thead class="table-primary">
-                <tr class="text-center">
-                    <th scope="col">Date</th>
-                    <th scope="col">Order No.</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Manage</th>
+                <tr class="">
+                    <th class="col text-center">Date</th>
+                    <th class="col text-center">Order No.</th>
+                    <th class="col text-center">Type</th>
+                    <th class="col text-center">Status</th>
+                    <th class="col text-start" style="width:20%;">Manage</th>
                 </tr>
             </thead>
             <tbody>
             {% for order in orders %}
-                <tr class="text-center">
-                    <td>{{ order.date.strftime('%Y-%m-%d') }}</td>
-                    <td>{{ order.id }}</td>
-                    <td>{{ "Delivery" if order.is_delivery else "Pickup" }}</td>
-                    <td>{{ order.status }}</td>
-                    <td>
+                <tr class="">
+                    <td class="col text-center">{{ order.date.strftime('%Y-%m-%d') }}</td>
+                    <td class="col text-center">{{ order.id }}</td>
+                    <td class="col text-center">{{ "Delivery" if order.is_delivery else "Pickup" }}</td>
+                    <td class="col text-center">{{ order.status }}</td>
+                    <td class="col text-start">
                         {% if role == 'staff' %}
                             <a class="btn btn-primary btn-sm me-2"
                             href="{{ url_for('staff.view_order', order_id=order.id) }}">
@@ -63,7 +63,7 @@ Orders
                                 Details
                             </a>
                             {% if order.status == 'Pending' %}
-                            <!-- add confirm order button for order that is not submitted -->
+                            <!-- Payment button for order that is not confirmed -->
                             <a class="btn btn-success btn-sm me-2"
                                 href="{{ url_for('order.check_out', order_id=order.id) }}">
                                 Pay Now
