--- a/templates/customer/order/new.html
+++ b/templates/customer/order/new.html
@@ -5,7 +5,7 @@ Create Order
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mb-2">
+<div class="container p-2">
     <div class="justify-content-center">
         <h3>New Order</h3>
     </div> 
