--- a/templates/customer/order/view.html
+++ b/templates/customer/order/view.html
@@ -1,109 +1,111 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Orders
+Order Details
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-sm-12 mx-auto">
-        <!-- Order details -->
-        <div class="card">
-            <h5 class="card-header">Order Details</h5>
+<div class="container p-2">
+    <div class="row">
+        <div class="col-sm-12 mx-auto">
+            <!-- Order details -->
+            <div class="card">
+                <h5 class="card-header">Order Details</h5>
 
-            <div class="card-body d-flex">
-                <dl class="row ms-2 me-2 col-sm-12">
+                <div class="card-body d-flex">
+                    <dl class="row ms-2 me-2 col-sm-12">
 
-                    <dt class="col-sm-2">Date Created</dt>
-                    <dd class="col-sm-4">{{ order.date }}</dd>
+                        <dt class="col-sm-2">Date Created</dt>
+                        <dd class="col-sm-4">{{ order.date }}</dd>
 
-                    <dt class="col-sm-2">Order Ref. no.</dt>
-                    <dd class="col-sm-4">{{ order.id }}</dd>
+                        <dt class="col-sm-2">Order Ref. no.</dt>
+                        <dd class="col-sm-4">{{ order.id }}</dd>
 
-                    <dt class="col-sm-2">Customer Name</dt>
-                    <dd class="col-sm-4">{{ order.customer.fullname() | title }}</dd>
+                        <dt class="col-sm-2">Customer Name</dt>
+                        <dd class="col-sm-4">{{ order.customer.fullname() | title }}</dd>
 
-                    <dt class="col-sm-2">Delivery</dt>
-                    <dd class="col-sm-4">{{ "Yes" if order.is_delivery == 1 else "No" }}</dd>
+                        <dt class="col-sm-2">Delivery</dt>
+                        <dd class="col-sm-4">{{ "Yes" if order.is_delivery == 1 else "No" }}</dd>
 
-                    <dt class="col-sm-2">Status</dt>
-                    <dd class="col-sm-4">{{ order.status }}</dd>
-                                                             
-                    <div>
-                        <hr>
-                    </div>
-                </dl>
+                        <dt class="col-sm-2">Status</dt>
+                        <dd class="col-sm-4">{{ order.status }}</dd>
+                                                                
+                        <div>
+                            <hr>
+                        </div>
+                    </dl>
+                </div>
+                <div class="table-responsive ms-4 me-4 mb-4">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th class="text-center" style="width:5%;">No.</th>
+                                <th style="width:45%;">Product</th>                                                                        
+                                <th class="text-end" style="width:5%;">Qty</th>
+                                <th class="text-end" style="width:15%;">Unit Price</th>
+                                <th class="text-end me-2" style="width:15%;">Total Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for orderline in order.orderlines %}
+                            <tr>
+                                <td class="text-center">{{ loop.index }}</td>
+                                <td>{{ orderline.item.name if orderline.item.name else orderline.item.box_name() }}</td>                                    
+                                <td class="text-end">{{ orderline.item.quantity_display() }}</td>
+                                <td class="text-end">{{ orderline.item.price_display() }}</td>
+                                <td class="text-end me-2">{{ orderline.item.subtotal_display() }}</td>
+                            </tr>
+                            {% endfor %}
+                            {% if discount > 0 %}                                
+                            <tr>
+                                <th scope="row" colspan="4" class="border-0 text-end">
+                                    Discount:
+                                </th>
+                                <td class="border-0 text-end">
+                                    {{ "%.2f"|format(discount) }}
+                                </td>
+                            </tr>
+                            {% endif %}
+                            {% if order.is_delivery %}
+                            <tr>
+                                <th scope="row" colspan="4" class="border-0 text-end">
+                                    Delivery Fee:
+                                </th>
+                                <td class="border-0 text-end">
+                                    {{ "%.2f"|format(delivery_fee) }}
+                                </td>
+                            </tr>
+                            {% endif %}
+                            <tr>
+                                <th scope="row" colspan="4" class="border-0 text-end">
+                                    Total:
+                                </th>
+                                <td class="border-0 text-end">
+                                    <h6 class="m-0 fw-semibold">
+                                    {{ "NZD %.2f"|format(order.calculate_final_total()) }}
+                                    </h6>
+                                </td>
+                            </tr>
+                            <!-- end tr -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="table-responsive ms-4 me-4 mb-4">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th class="text-center" style="width:5%;">No.</th>
-                            <th style="width:45%;">Product</th>                                                                        
-                            <th class="text-end" style="width:5%;">Qty</th>
-                            <th class="text-end" style="width:15%;">Unit Price</th>
-                            <th class="text-end me-2" style="width:15%;">Total Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for orderline in order.orderlines %}
-                        <tr>
-                            <td class="text-center">{{ loop.index }}</td>
-                            <td>{{ orderline.item.name if orderline.item.name else orderline.item.box_name() }}</td>                                    
-                            <td class="text-end">{{ orderline.item.quantity_display() }}</td>
-                            <td class="text-end">{{ orderline.item.price_display() }}</td>
-                            <td class="text-end me-2">{{ orderline.item.subtotal_display() }}</td>
-                        </tr>
-                        {% endfor %}
-                        {% if discount > 0 %}                                
-                        <tr>
-                            <th scope="row" colspan="4" class="border-0 text-end">
-                                Discount:
-                            </th>
-                            <td class="border-0 text-end">
-                                {{ "%.2f"|format(discount) }}
-                            </td>
-                        </tr>
-                        {% endif %}
-                        {% if order.is_delivery %}
-                        <tr>
-                            <th scope="row" colspan="4" class="border-0 text-end">
-                                Delivery Fee:
-                            </th>
-                            <td class="border-0 text-end">
-                                {{ "%.2f"|format(delivery_fee) }}
-                            </td>
-                        </tr>
-                        {% endif %}
-                        <tr>
-                            <th scope="row" colspan="4" class="border-0 text-end">
-                                Total:
-                            </th>
-                            <td class="border-0 text-end">
-                                <h6 class="m-0 fw-semibold">
-                                {{ "NZD %.2f"|format(order.calculate_final_total()) }}
-                                </h6>
-                            </td>
-                        </tr>
-                        <!-- end tr -->
-                    </tbody>
-                </table>
+            {% if role in ('customer', 'corporate_customer') %}                        
+            <div class="d-flex justify-content-start mt-2 mb-3">
+                <a href="{{url_for('order.list_orders')}}" class="link-back">
+                    <i class="bi bi-arrow-left"></i> Back to Order List
+                </a>
             </div>
+            {% endif %}
+            {% if role == 'staff' %}
+            <div class="d-flex justify-content-start mt-2 mb-3">
+                <a href="{{url_for('staff.list_orders')}}" class="link-back">
+                    <i class="bi bi-arrow-left"></i> Back to Order List
+                </a>
+            </div>
+            {% endif %}
         </div>
-        {% if role in ('customer', 'corporate_customer') %}                        
-        <div class="d-flex justify-content-start mt-2 mb-3">
-            <a href="{{url_for('order.list_orders')}}" class="link-back">
-                <i class="bi bi-arrow-left"></i> Back to Order List
-            </a>
-        </div>
-        {% endif %}
-        {% if role == 'staff' %}
-        <div class="d-flex justify-content-start mt-2 mb-3">
-            <a href="{{url_for('staff.list_orders')}}" class="link-back">
-                <i class="bi bi-arrow-left"></i> Back to Order List
-            </a>
-        </div>
-        {% endif %}
     </div>
 </div>
 {% endblock %}
