--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Dashboard
+Dashboard
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container mt-5 p-2">
     <!-- Display if user is logged in -->
     {% if username %}
-    <div class="container mt-5 p-2 text-center">
+    <div class="container text-center">
         <h2 class="mt-4 mb-5">
             Welcome back {{ username }}
         </h2>
