--- a/templates/staff/customer/list.html
+++ b/templates/staff/customer/list.html
@@ -5,7 +5,7 @@ Customers
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid p-2">
+<div class="container p-2">
     <div class="d-flex justify-content-between mt-2 mb-3 me-4">
         <h3>Customer List</h3>
         <div class="d-flex">
